modules/C_full_project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
spec:
  type: ClusterIP
  selector:
    app: devops-demo
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
